[PRM-713] Upgraded to Gradle 8 & Spring Boot 3.5